--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -255,9 +255,19 @@ header.navigation {
       }
     }
   }
-  #gallery-pic {
+
+  #gallery-section {
+    @include clearfix;
+    list-style-type: none;
+    padding-left: 0;
+
+    li:not(.is-open) {
+      display: none;
+    }
+
     figure {
       @include span-columns(4);
+      @include omega(3n);
       @include border-img-link;
       display: inline-block;
       margin-bottom: 20px;
@@ -271,83 +281,6 @@ header.navigation {
         @include omega-reset(2n);
         @include omega(2n);
       }
-
-      &.current {
-        display: inline-block; 
-      }
-      &.not-current {
-        display: none;
-      }
-    }
-  }
-}
-
-.accordion-tabs-minimal {
-  $base-border-color: #dcdcdc !default;
-  $base-background-color: #fff !default;
-  $base-spacing: 1.5em !default;
-  $action-color: #477dca !default;
-  $dark-gray: #333 !default;
-  $medium-screen: em(640) !default;
-  $tab-link-color: $dark-gray;
-  $tab-border: 1px solid $base-border-color;
-  $tab-active-background: $base-background-color;
-  $tab-inactive-color: $base-background-color;
-  $tab-inactive-hover-color: #c0c0c0;
-  $tab-mode: $medium-screen;
-
-  @include clearfix;
-  line-height: 1.5;
-  padding: 0;
-
-  .tab-header-and-content {
-    list-style: none;
-
-    @include media($tab-mode) {
-      display: inline;
-    }
-  }
-
-  .tab-link {
-    background-color: $tab-inactive-color;
-    border-top: $tab-border;
-    color: $tab-link-color;
-    display: block;
-    padding: ($base-spacing / 2) $gutter;
-    text-decoration: none;
-
-    @include media($tab-mode) {
-      border-top: 0;
-      display: inline-block;
-    }
-
-    &:hover {
-      color: $action-color;
-    }
-
-    &:focus {
-      outline: none;
-    }
-
-    &.is-active {
-      border-bottom: 0;
-
-      @include media($tab-mode) {
-        border: $tab-border;
-        border-bottom-color: $tab-active-background;
-        margin-bottom: -1px;
-      }
-    }
-  }
-
-  .tab-content {
-    display: none;
-    padding: $base-spacing $gutter;
-    width: 100%;
-
-    @include media($tab-mode) {
-      border-top: $tab-border;
-      float: left;
     }
   }
 }
