--- a/app/css/style.css
+++ b/app/css/style.css
@@ -4,132 +4,185 @@ html {
 *, *::after, *::before {
   box-sizing: inherit; }
 
+@font-face {
+  font-family: "open-sans";
+  font-style: normal;
+  font-weight: normal;
+  src: url("/fonts/OpenSans-Regular.ttf") format("truetype"); }
+
+p, h4, li {
+  font-family: 'open-sans'; }
+
+h1 {
+  background: #e2e2e2;
+  font-family: 'Roboto Slab', serif;
+  font-size: 1.4em;
+  letter-spacing: 2pt;
+  margin: 0;
+  padding: 15px 0;
+  text-align: center;
+  text-transform: uppercase; }
+
+.header-title {
+  max-width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid #d6cac7;
+  margin: 20px auto;
+  padding: 3px; }
+  .header-title::after {
+    clear: both;
+    content: "";
+    display: table; }
+
 h4 {
   margin: 0;
   text-transform: uppercase; }
 
+header {
+  border-top: 5px solid #1F1A16; }
+  header::after {
+    clear: both;
+    content: "";
+    display: table; }
+  header #top-nav-container {
+    padding-top: 10px;
+    padding-bottom: 10px; }
+    header #top-nav-container ul {
+      display: inline-block;
+      margin: 0;
+      margin-bottom: 0;
+      padding: 0;
+      position: relative;
+      float: right; }
+      header #top-nav-container ul li {
+        display: inline-block;
+        margin: 0 8px 0 0;
+        padding: 0;
+        position: relative; }
+        header #top-nav-container ul li:last-of-type {
+          margin-right: 0; }
+        header #top-nav-container ul li a {
+          display: inline-block;
+          font-family: 'Roboto Slab', serif;
+          letter-spacing: 2pt;
+          text-decoration: none;
+          text-transform: uppercase; }
+    header #top-nav-container img {
+      width: 16px; }
+  header #nav-container {
+    border-top: 2px solid rgba(31, 26, 22, 0.07);
+    border-bottom: 2px solid rgba(31, 26, 22, 0.07);
+    padding-top: 10px;
+    padding-bottom: 10px; }
+    header #nav-container::after {
+      clear: both;
+      content: "";
+      display: table; }
+  header .logo {
+    float: left; }
+    header .logo img {
+      width: 100%; }
+  header nav .navigation-menu {
+    display: inline-block;
+    margin: 0;
+    margin-bottom: 0;
+    padding: 0;
+    position: relative;
+    padding: 15px 0;
+    float: right; }
+    header nav .navigation-menu li {
+      display: inline-block;
+      margin: 0 8px 0 0;
+      padding: 0;
+      position: relative; }
+      header nav .navigation-menu li:last-of-type {
+        margin-right: 0; }
+      header nav .navigation-menu li a {
+        display: inline-block;
+        font-family: 'Roboto Slab', serif;
+        letter-spacing: 2pt;
+        text-decoration: none;
+        text-transform: uppercase; }
+    header nav .navigation-menu li {
+      margin-right: 50px; }
+      @media screen and (max-width: 30em) {
+        header nav .navigation-menu li {
+          width: 100%; } }
+      @media screen and (min-width: 30em) and (max-width: 45em) {
+        header nav .navigation-menu li {
+          width: 100%; } }
+    header nav .navigation-menu a {
+      color: #191919;
+      font-size: 0.875em;
+      position: relative; }
+      header nav .navigation-menu a:before {
+        -webkit-transition: all 0.3s ease-in-out 0s;
+        -moz-transition: all 0.3s ease-in-out 0s;
+        transition: all 0.3s ease-in-out 0s;
+        -webkit-transform: scaleX(0);
+        -moz-transform: scaleX(0);
+        -ms-transform: scaleX(0);
+        -o-transform: scaleX(0);
+        transform: scaleX(0);
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 3px;
+        top: -28px;
+        left: 0;
+        background-color: #bc2626;
+        visibility: hidden; }
+      header nav .navigation-menu a:hover:before {
+        -webkit-transform: scaleX(1);
+        -moz-transform: scaleX(1);
+        -ms-transform: scaleX(1);
+        -o-transform: scaleX(1);
+        transform: scaleX(1);
+        visibility: visible; }
+  @media screen and (min-width: 45em) {
+    header .navigation-menu-button {
+      display: none; } }
+
 body {
-  background-image: url("/images/header-bg.png");
-  background-image: url("/images/header-bg.png");
-  background-color: #ebe3e1;
-  background-position: center top;
-  background-repeat: no-repeat;
+  background-image: url("../images/hbg.jpg");
+  background-image: url("../images/hbg.jpg");
   margin: 0; }
 
 figure {
   margin: 0; }
 
-header.navigation {
-  border-bottom: 1px solid #c0aeaa;
-  padding-top: 10px;
-  min-height: 100px;
-  width: 100%;
-  z-index: 999; }
-  header.navigation .navigation-wrapper {
-    max-width: 68em;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    z-index: 9999; }
-    header.navigation .navigation-wrapper::after {
-      clear: both;
-      content: "";
-      display: table; }
-    header.navigation .navigation-wrapper::after {
-      clear: both;
-      content: "";
-      display: table; }
-  header.navigation .logo {
-    float: left;
-    max-height: 100px;
-    padding-left: 1em;
-    padding-right: 2em; }
-    header.navigation .logo img {
-      max-height: 100px;
-      padding: .8em 0; }
-  header.navigation .navigation-menu-button {
-    color: rgba(0, 0, 0, 0.7);
-    display: block;
-    float: right;
-    line-height: 100px;
-    margin: 0;
-    padding-right: 1em;
-    text-decoration: none;
-    text-transform: uppercase; }
-    @media screen and (min-width: 53.75em) {
-      header.navigation .navigation-menu-button {
-        display: none; } }
-    header.navigation .navigation-menu-button:focus, header.navigation .navigation-menu-button:hover {
-      color: white; }
-  header.navigation nav {
-    float: none;
-    min-height: 100px;
-    z-index: 9999999; }
-    @media screen and (min-width: 53.75em) {
-      header.navigation nav {
-        float: right; } }
-  header.navigation ul.navigation-menu {
-    clear: both;
-    display: none;
-    margin: 0 auto;
-    overflow: visible;
-    padding: 0;
-    width: 100%;
-    z-index: 9999; }
-    header.navigation ul.navigation-menu.show {
-      display: block; }
-    @media screen and (min-width: 53.75em) {
-      header.navigation ul.navigation-menu {
-        display: inline;
-        margin: 0;
-        padding: 0; } }
-  header.navigation ul li.nav-link {
-    background: #d6cac7;
-    display: block;
-    font-size: 12pt;
-    line-height: 100px;
-    overflow: hidden;
-    text-align: right;
-    width: 100%;
-    z-index: 9999; }
-    @media screen and (min-width: 53.75em) {
-      header.navigation ul li.nav-link {
-        background: transparent;
-        display: inline;
-        line-height: 100px;
-        text-decoration: none;
-        width: auto; } }
-    header.navigation ul li.nav-link:not(:last-child) {
-      margin-right: 40px; }
-    header.navigation ul li.nav-link a {
-      color: rgba(0, 0, 0, 0.7);
-      display: inline-block;
-      text-decoration: none;
-      text-transform: uppercase; }
-      header.navigation ul li.nav-link a:focus, header.navigation ul li.nav-link a:hover {
-        color: white; }
-  header.navigation .active-nav-item a {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-    padding-bottom: 3px; }
-
-#wrapper {
-  max-width: 100%;
+.wrapper {
+  max-width: 50em;
   margin-left: auto;
   margin-right: auto;
-  max-width: 1050px;
-  padding: 35px 25px; }
-  #wrapper::after {
+  background: #fff; }
+  .wrapper::after {
     clear: both;
     content: "";
     display: table; }
+  @media screen and (min-width: 60em) {
+    .wrapper {
+      max-width: 56.25em;
+      margin-left: auto;
+      margin-right: auto; }
+      .wrapper::after {
+        clear: both;
+        content: "";
+        display: table; } }
+  @media screen and (min-width: 65.625em) {
+    .wrapper {
+      max-width: 65.625em;
+      margin-left: auto;
+      margin-right: auto; }
+      .wrapper::after {
+        clear: both;
+        content: "";
+        display: table; } }
 
 .container {
-  display: block;
-  padding-top: 20px; }
-  .container::after {
-    clear: both;
-    content: "";
-    display: table; }
+  width: 100%;
+  padding: 35px 25px 0; }
 
 #base #highlight {
   margin-bottom: 20px; }
@@ -159,7 +212,11 @@ header.navigation {
     #base ul.browse-category li:last-of-type {
       margin-right: 0; }
     #base ul.browse-category li a {
-      display: inline-block; }
+      display: inline-block;
+      font-family: 'Roboto Slab', serif;
+      letter-spacing: 2pt;
+      text-decoration: none;
+      text-transform: uppercase; }
   #base ul.browse-category li {
     float: left;
     display: block;
@@ -170,6 +227,7 @@ header.navigation {
       margin-right: 0; }
     #base ul.browse-category li a > img {
       border: 1px solid #d6cac7;
+      box-shadow: 0 1px 10px #e2e2e2;
       display: block;
       padding: 4px;
       width: 100%; }
@@ -196,7 +254,11 @@ header.navigation {
       #gallery nav ul li:last-of-type {
         margin-right: 0; }
       #gallery nav ul li a {
-        display: inline-block; }
+        display: inline-block;
+        font-family: 'Roboto Slab', serif;
+        letter-spacing: 2pt;
+        text-decoration: none;
+        text-transform: uppercase; }
     #gallery nav ul li {
       float: left;
       display: block;
@@ -206,6 +268,17 @@ header.navigation {
       padding: 7px 0; }
       #gallery nav ul li:last-child {
         margin-right: 0; }
+      #gallery nav ul li a {
+        color: #000;
+        font-size: 0.75em; }
+      #gallery nav ul li:hover, #gallery nav ul li.is-active {
+        -webkit-transition: all 0.5s ease;
+        -moz-transition: all 0.5s ease;
+        transition: all 0.5s ease;
+        background: #c0aeaa; }
+        #gallery nav ul li:hover a, #gallery nav ul li.is-active a {
+          color: #fff;
+          font-style: italic; }
 
 #gallery #gallery-section {
   list-style-type: none;
@@ -231,6 +304,7 @@ header.navigation {
       clear: left; }
     #gallery #gallery-section figure a > img {
       border: 1px solid #d6cac7;
+      box-shadow: 0 1px 10px #e2e2e2;
       display: block;
       padding: 4px;
       width: 100%; }
@@ -245,14 +319,175 @@ header.navigation {
         width: 48.82117%; }
         #gallery #gallery-section figure:last-child {
           margin-right: 0; }
-        #gallery #gallery-section figure:nth-child(2n) {
+        #gallery #gallery-section figure:nth-child(3n) {
           margin-right: 2.35765%; }
-        #gallery #gallery-section figure:nth-child(2n+1) {
+        #gallery #gallery-section figure:nth-child(3n+1) {
           clear: none; }
         #gallery #gallery-section figure:nth-child(2n) {
           margin-right: 0; }
         #gallery #gallery-section figure:nth-child(2n+1) {
           clear: left; } }
 
+#contact .row {
+  display: block;
+  margin-top: 30px; }
+  #contact .row::after {
+    clear: both;
+    content: "";
+    display: table; }
+
+#contact form {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 57.35098%; }
+  #contact form:last-child {
+    margin-right: 0; }
+  #contact form input[type="text"], #contact form input[type="email"], #contact form textarea {
+    float: left;
+    display: block;
+    margin-right: 1.40138%;
+    width: 74.64966%; }
+    #contact form input[type="text"]:last-child, #contact form input[type="email"]:last-child, #contact form textarea:last-child {
+      margin-right: 0; }
+    #contact form input[type="text"]:nth-child(2n), #contact form input[type="email"]:nth-child(2n), #contact form textarea:nth-child(2n) {
+      margin-right: 0; }
+    #contact form input[type="text"]:nth-child(2n+1), #contact form input[type="email"]:nth-child(2n+1), #contact form textarea:nth-child(2n+1) {
+      clear: left; }
+  #contact form .label-wrapper {
+    float: left;
+    display: block;
+    margin-right: 1.40138%;
+    width: 23.94897%;
+    background-image: url("../images/arrow.png");
+    background-image: url("../images/arrow.png");
+    background-position: right center;
+    background-repeat: no-repeat; }
+    #contact form .label-wrapper:last-child {
+      margin-right: 0; }
+    #contact form .label-wrapper label {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 91.4702%; }
+      #contact form .label-wrapper label:last-child {
+        margin-right: 0; }
+  #contact form .btn-wrapper {
+    width: 100%;
+    text-align: right; }
+
+#contact #info {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 40.29137%;
+  background: #e2e2e2;
+  padding: 15px; }
+  #contact #info:last-child {
+    margin-right: 0; }
+
+#contact label {
+  background-color: #d6cac7;
+  border: 3px solid #d2c4c1;
+  color: #fff;
+  font-family: 'Roboto Slab', serif;
+  font-size: 0.75em;
+  font-style: italic;
+  letter-spacing: 2pt;
+  padding: 7px 10px;
+  text-transform: uppercase; }
+
+#contact input[type="text"], #contact input[type="email"], #contact textarea {
+  width: 100%;
+  border: 2px solid #e3e3e3;
+  font-family: 'Roboto Slab', serif;
+  font-size: 0.875em;
+  margin-bottom: 20px;
+  padding: 7px 10px; }
+
+#contact textarea {
+  height: 200px; }
+
+#contact #map {
+  width: 100%;
+  height: 400px;
+  background-color: #CCC; }
+
+.modal .modal-fade-screen {
+  -webkit-transition: opacity 0.25s ease;
+  -moz-transition: opacity 0.25s ease;
+  transition: opacity 0.25s ease;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+  opacity: 0;
+  padding-top: 0.6em;
+  text-align: left;
+  visibility: hidden;
+  z-index: 99999999999; }
+  @media screen and (min-width: 45em) {
+    .modal .modal-fade-screen {
+      padding-top: 10em; } }
+
+.modal .modal-close {
+  position: absolute;
+  top: 1.5em;
+  right: 1.5em;
+  height: 1.5em;
+  width: 1.5em;
+  background: rgba(0, 0, 0, 0.9);
+  cursor: pointer; }
+  .modal .modal-close:after, .modal .modal-close:before {
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    bottom: 0;
+    left: 50%;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+    height: 1.5em;
+    width: 0.15em;
+    background: #ddd;
+    content: '';
+    display: block;
+    margin: -3px 0 0 -1px; }
+  .modal .modal-close:hover:after, .modal .modal-close:hover:before {
+    background: #c4c4c4; }
+  .modal .modal-close:before {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg); }
+
+.modal .modal-inner {
+  -webkit-transition: opacity 0.25s ease;
+  -moz-transition: opacity 0.25s ease;
+  transition: opacity 0.25s ease;
+  background: rgba(0, 0, 0, 0.9);
+  border-radius: 3px;
+  margin-top: 0;
+  margin: auto;
+  max-height: 95%;
+  overflow: auto;
+  padding: 1.5em;
+  position: relative;
+  width: 95%; }
+  @media screen and (max-width: 30em) {
+    .modal .modal-inner {
+      max-height: 70%;
+      padding: 3em;
+      width: 60%; } }
+  @media screen and (min-width: 65.625em) {
+    .modal .modal-inner {
+      width: 50%; } }
+
 footer {
-  margin-top: 20px; }
+  margin-top: 20px;
+  padding-bottom: 20px; }
